--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "proxy": ["http://localhost:5000/", "https://productapplication.onrender.com/"],
+  "proxy": "https://productapplication.onrender.com/",
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
